--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button id="addTaskButton">Add Task</button>
         </form>
         <ul id="taskList" class="taskList"></ul>
-        <button id="clearCompletedButton">Clear Completed Tasks</button>
+        <button id="clearCompletedButton" class="clearCompletedButton">Clear Completed Tasks</button>
     </div>
 
 </body>
